Added in header and nav content

--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
   <head>
     <meta charset="utf-8">
 
-    <title></title>
+    <title>Owen Davies Portfolio</title>
 
     <link rel="stylesheet" href="">
   </head>
   <body>
 
-    
+  <header>
+    <h1>Owen Huw Davies</h1>
+  </header>
+  
+  <nav>
+    <ul>
+      <li>About me</li>
+      <li>Skills</li>
+      <li>Projects</li>
+      <li>Contact</li>
+    </ul>
+  </nav>
  
   </body>
 </html>
