--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
     </ul>
   </nav>
  
+  <main>
+    <h2>About me</h2>
+    <p>Hi. I'm Owen Davies. I am currently studying a Full-Stack Engineer course with Codecademy. I currently work as a lorry driver full time, and study in my free time. I've always wanted to work in the field of computer programming as it has always been an interest of mine. Most of my spare time is dedicated to this course, however i do enjoy gaming where I can find the time. Below is some of the work I've been doing as part of my course with Codecademy. I will continue to update the page as and when I make new projects or learn a new language. Thanks for checking out my webpage.</p> 
+  </main>
+
   </body>
 </html>
