--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 
     <title>Owen Davies Portfolio</title>
 
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+  
   </head>
+
   <body>
 
     <header>
@@ -47,7 +52,7 @@
     </main>
 
     <footer>
-      <p>Creater by Owen Huw Davies</p>
+      <p>Created by Owen Huw Davies</p>
     </footer>
   
   </body>
