Added in projects images and css styling, ready for JS

--- a/index.html
+++ b/index.html
@@ -44,9 +44,22 @@
       <div id="projects">
         <h2>Projects</h2>
         <ul>
-          <li>Mixed Messages</li>
-          <li>Excursion</li>
-          <li>Cefneithin Rugby Club</li>
+          <li><i class="arrow right"></i>  Mixed Messages<br>
+            <div class="mixed-messages">
+              <img src="/resources/images/mixed messages code.jpg"><br>
+              <p>This is some of the code from the mixed messages project Codecademy assigned. It is a random horoscope generator, I created this on JavaScript.</p>
+            </div>
+          </li>
+          <li><i class="arrow right"></i>  Excursion</li><br>
+            <div class="excursion">
+              <img src="/resources/images/Excursion.jpg"><br>
+              <p>This is a website for an app yet to launch, it was another of my Codecademy projects and was made with HTML and CSS.</p>
+            </div>
+          <li id="list-fix"><i class="arrow right"></i>  Cefneithin Rugby Club</li><br>
+            <div class="rugby-club">
+              <img src="/resources/images/cefneithin rugby club.jpg"><br>
+              <p>This is a website I made for my local rugby club, It was a task set by Codecademyto practice using flexbox and responsive website designs.</p>
+            </div>
         </ul>
       </div>
       
