finished content for index, and styled the bulk of the page

--- a/index.html
+++ b/index.html
@@ -63,19 +63,22 @@
         </ul>
       </div>
       
-      <h2>Skills</h2>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Command Line</li>
-        <li>Git and GitHub</li>
-      </ul>
-    
+       <div id="skills">
+        <h2>Skills</h2>
+        <ul>
+          <li>HTML <img src="/resources/images/html.jpg"></li>
+          <li>CSS <img src="/resources/images/css-3.jpg"></li>
+          <li>JavaScript <img src="/resources/images/javascript.jpg"></li>
+          <li>Command Line <img src="/resources/images/command-line.jpg"></li>
+          <li>Git and GitHub <img src="/resources/images/github.jpg"></li>
+        </ul>
+      </div>
+
     </main>
 
     <footer>
       <p>Created by Owen Huw Davies</p>
+      <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </footer>
   
   </body>
