--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <script src="/scripts/script.js"></script>
   
   </head>
 
@@ -44,13 +45,13 @@
       <div id="projects">
         <h2>Projects</h2>
         <ul>
-          <li><i class="arrow right"></i>  Mixed Messages<br>
+          <li><button onclick="toggleDisplay()"><i class="arrow right"></i>  Mixed Messages</button><br>
             <div class="mixed-messages">
               <img src="/resources/images/mixed messages code.jpg"><br>
               <p>This is some of the code from the mixed messages project Codecademy assigned. It is a random horoscope generator, I created this on JavaScript.</p>
             </div>
           </li>
-          <li><i class="arrow right"></i>  Excursion</li><br>
+          <li><button onclick="toggleDisplay2()"><i class="arrow right"></i>  Excursion</li></button><br>
             <div class="excursion">
               <img src="/resources/images/Excursion.jpg"><br>
               <p>This is a website for an app yet to launch, it was another of my Codecademy projects and was made with HTML and CSS.</p>
@@ -74,6 +75,8 @@
         </ul>
       </div>
 
+
+      <button onclick="changeBground()">hey</button>
     </main>
 
     <footer>
