--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
       <div id="projects">
         <h2>Projects</h2>
         <ul>
-          <li><button onclick="toggleDisplay()"><i class="arrow right"></i>  Mixed Messages</button><br>
-            <div class="mixed-messages">
+          <li><button id="toggle1" onclick="toggleDisplay1()"><i class="arrow right"></i>  Mixed Messages</button><br>
+            <div id="mixed-messages">
               <img src="/resources/images/mixed messages code.jpg"><br>
               <p>This is some of the code from the mixed messages project Codecademy assigned. It is a random horoscope generator, I created this on JavaScript.</p>
             </div>
           </li>
-          <li><button onclick="toggleDisplay2()"><i class="arrow right"></i>  Excursion</li></button><br>
-            <div class="excursion">
+          <li><button id="toggle2" onclick="toggleDisplay2()"><i class="arrow right"></i>  Excursion</li></button><br>
+            <div id="excursion">
               <img src="/resources/images/Excursion.jpg"><br>
               <p>This is a website for an app yet to launch, it was another of my Codecademy projects and was made with HTML and CSS.</p>
             </div>
-          <li id="list-fix"><i class="arrow right"></i>  Cefneithin Rugby Club</li><br>
-            <div class="rugby-club">
+          <li id="list-fix"><button id="toggle3" onclick="toggleDisplay3()"><i class="arrow right"></i>  Cefneithin Rugby Club</li></button><br>
+            <div id="rugby-club">
               <img src="/resources/images/cefneithin rugby club.jpg"><br>
               <p>This is a website I made for my local rugby club, It was a task set by Codecademyto practice using flexbox and responsive website designs.</p>
             </div>
@@ -75,8 +75,6 @@
         </ul>
       </div>
 
-
-      <button onclick="changeBground()">hey</button>
     </main>
 
     <footer>
